# OpenMAL

./: CMakeLists.txt  README.md
OpenMAL/: Material.h  Model.h  ModelLoader.h  OpenMAL.h  Texture.h
OpenMAL/loaders/: ObjLoader.h  StlLoader.h
examples/: PrintObj.cpp  PrintStl.cpp
